--- a/docs/TODO
+++ b/docs/TODO
@@ -204,7 +204,7 @@ implemented:
 - Clean-up ASIS configuration. Use new ASIS setup based on project files.
   Remove the setup for older version of ASIS having no project file.
 
-- Revisite the AdaSockets support. Should we continue supporting this ?
+- Revisit the AdaSockets support. Should we continue supporting this ?
   It would certainly be easier to support only GNAT.Sockets and use the
   selector facilities instead of the AWS's poll() support.
 
