--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-31  Pascal Obry  <pascal@obry.net>
+
+	* aws-pop.ads, aws-pop.adb:
+	(To): New routine.
+        (To_count): Idem.
+        Routines to returns the content of the To field.
+        Update copyright notice.
+        Patch contributed by Adrian Hoe.
+
 2005-05-18  Pascal Obry  <pascal@obry.net>
 
 	* aws-net-buffered.ads:
