--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-04  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net-buffered.adb:
+	(Get_Line):  Return last line on connection closed by peer without
+	 terminating end of line character.
+
 2005-06-03  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-server-protocol_handler.adb:
