--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-30  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-server-push.adb:
+	(Register): Do not use Cursor after container modification.
+
+	* src.gpr:
+	Fix typo in comments.
+
 2005-06-04  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-net-buffered.adb:
