--- a/config/projects/ChangeLog
+++ b/config/projects/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-02  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* shared.gpr:
+	(Naming): Add IPv6 sockets implementation.
+
 2005-02-23  Pascal Obry  <obry@adacore.com>
 
 	* shared.gpr:
