--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* afile_pack.adb:
+	(CB): Show unsupported URI.
+
 2005-06-23  Pascal Obry  <pascal@obry.net>
 
 	* soap_hotplug_pack_service-client.adb:
