--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-mime.adb:
+	(Initialize.Load): Fix End_Of_File condition. Fix Read_Extension loop.
+
 2005-07-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-containers-tables-set.adb:
