--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-mime.adb:
+	(Initialize.Load): Regular expression is in slashes.
+
 2005-07-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-mime.adb:
