--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-12  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-server-protocol_handler.adb:
+	Minor reformat.
+	Update copyright years range.
+
 2005-07-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-mime.ads:
