--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-02  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* libeay32.dll, libssl32.dll:
+	DLL updated to OpenSSL version 0.9.8, build under GNAT 5.03a1.
+
 2005-04-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* poll.adb:
