--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-log.ads, aws-log.adb:
+	(Write): Type of Content_Length parameter is Response.Content_Length_Type.
+	 Do not try to show Undefined_Length in log file, Constraint_Error would
+	 occur. ??? Maybe we should write something in this case.
+
 2005-08-01  Pascal Obry  <pascal@obry.net>
 
 	* aws-net.adb:
