--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
+	(Peer_Port): New routine.
+
 2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-net-std__gnat.adb:
