--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-08  Pascal Obry  <pascal@obry.net>
+
+	* src/check_config.c:
+	Clean-up change to have file written in UNIX format introduced in
+	 version 1.32.
+
 2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* src/check_config.c:
@@ -6,15 +12,17 @@
 
 2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
-	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
-	(Accept_Socket): Do not try to reuse allocated Socket_Hidden. It is dangerouse,
-	 because it could be deallocated in the copy of socket.
+	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb,
+	  aws-net-std__ipv6.adb:
+	(Accept_Socket): Do not try to reuse allocated Socket_Hidden. It
+	 is dangerouse, because it could be deallocated in the copy of socket.
 	(Bind): Idem. Free Socket_Hidden if bind fail.
 	(Connect): Idem.
 
 2005-09-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
-	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
+	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, 
+	  aws-net-std__ipv6.adb:
 	(Peer_Port): New routine.
 
 2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
