--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-09  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* accs.adb accs_proc.adb:
+	Test for package AWS.Net.Acceptors. Without regtest macro becouse not
+	 complete for now.
+
 2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* smem.out smem.adb smem_proc.adb smem_sec.adb smem_sec.out:
