--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -2,9 +2,9 @@
 
 	* src/check_config.c:
 	Use P with variable parameter list for all generated lines.
-	(P): Do not need to convert \n into \0xA, it is the same character in Unix
-	 and Windows. It is enought to use binary file mode "wb" for avoid DOS end of
-	 line.
+	(P): Do not need to convert \n into \0xA, it is the same character in
+	 Unix and Windows. It is enought to use binary file mode "wb" for avoid
+	 DOS end of line.
 	(PI): Remove.
 	(PS): Remove.
 	Add include for stdarg.h
