--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2005-09-13 Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
+	(Add): New Add routines with Data_Type parameter.
+
+	* aws-net-acceptors.ads, aws-net-acceptors.adb:
+	(Listen): Add timeout parameters.
+	(Get): Handle timeouts.
+
 2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-net-acceptors.adb:
