--- a/INSTALL
+++ b/INSTALL
@@ -8,9 +8,9 @@ Building a release
 To build AWS you need to change some settings in the top level 
 makefile.conf file.
 
-If you have XML/Ada installed and plan to build AWS with SOAP support you must
-be sure that ADA_PROJECT_PATH point to the XML/Ada projects. See XML/Ada
-documentation.
+If you have not installed XML/Ada into the standard directory and plan to
+build AWS with SOAP support you must be sure that ADA_PROJECT_PATH point to
+the XML/Ada projects. See XML/Ada documentation.
 
 Look for ADASOCKETS, ASIS, POSIX, and INSTALL make's variables. Then building
 AWS is as simple as:
@@ -20,9 +20,15 @@ AWS is as simple as:
 Note that you can find more information about the build procedure into
 the AWS User's Guide.
 
+This release requires an Ada compiler supporting some Ada 2005 features as it
+is using the Ada.Containers libraries. It is possible to build this release
+using the following compilers :
+
+	GNAT Pro 5.04w
+	GNAT GAP 2005 Edition
+	GNAT GPL 2005 Edition
 
 
-				       
 Building from CVS
 -----------------
 
